fixing spacing, video

--- a/Assets/styles/get_in_touch.css
+++ b/Assets/styles/get_in_touch.css
@@ -218,7 +218,7 @@ form textarea#mainMessage {
 }
 form button {
   display: block;
-  align-self: right;
+  align-self: center;
   padding: 0.8rem;
   border: 0.2rem solid black;
   border-radius: 0.5rem;
