--- a/Assets/styles/index.css
+++ b/Assets/styles/index.css
@@ -93,14 +93,14 @@ article section a:active
 }
 footer#amznOffer > p {
   align-self: start;
-  text-indent: none;
+  text-indent: 0;
   text-align: center;
   font-style: italic;
   margin: 1rem 0 1rem;
   font-weight: 500;
 }
 article section h2 {
-  text-indent: none;
+  text-indent: 0;
   font-size: 1.5rem;
   margin: 0 0 0.2rem;
 }
@@ -108,14 +108,14 @@ article section#welcome h2 {
   font-size: 1.8rem;
 }
 article section p, article section ul {
-  text-indent: none;
+  text-indent: 0;
   font-size: 1rem;
   font-weight: 500;
   padding: 0 3% 0;
   text-align: left;
 }
 article section ul {
-  text-indent: none;
+  text-indent: 0;
   font-size: 1rem;
   font-weight: 500;
   padding: 0 6% 0;
@@ -176,7 +176,7 @@ footer#amznOffer {
 h1:hover, article section:hover, figure:hover,	
 footer#amznOffer:hover,
 h1:active, article section:active, figure:active,	
-footer#amznOffer:active,
+footer#amznOffer:active
 {	
   /* font-size: 1.5rem;	
   line-height: 1.6rem; */	
